deployment/k8s/beerfestdb-volumes.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: beerfestdb
  labels:
    name: beerfestdb
---
## The following PV+PVC only needed for local development with a bind mount of the source code. 
## If omitted, the app will run with the default code baked into the image.
# apiVersion: v1
# kind: PersistentVolume
# metadata:
#   name: beerfestdb-code-pv-volume
#   labels:
#     type: local
#     name: beerfestdb-codevol
# spec:
#   storageClassName: manual
#   capacity:
#     storage: 1Gi
#   accessModes:
#     - ReadOnlyMany
#   hostPath:
#     path: "/home/tfrayner/src/beerfestdb"
# ---
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: beerfestdb-code-pv-claim
#   namespace: beerfestdb
# spec:
#   selector:
#     matchLabels:
#       name: beerfestdb-codevol
#   storageClassName: manual
#   accessModes:
#     - ReadOnlyMany
#   resources:
#     requests:
#       storage: 1Gi
# ---
