deployment/k8s/beerfestdb-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: beerfestdb
spec:
  ports:
  - port: 3306
  selector:
    app: mysql
  type: ClusterIP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  namespace: beerfestdb
  name: beerfestdb-mysql-ingress
spec:
  entryPoints:
    - bfdbmysql
  routes:
  - match: HostSNI(`*`)
    services:
    - name: mysql
      port: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: beerfestdb
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      # Consider mysql:9 here FIXME
      - image: mysql:5.7
        name: mysql
        resources:
          limits:
            cpu: '2'
            memory: 8G
          requests:
            cpu: 10m
            memory: 200Mi
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
        - name: mysql-initdb
          mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
      - name: mysql-initdb
        persistentVolumeClaim:
          claimName: mysqlinit-pv-claim
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: beerfestdb
  name: beerfestdb-app
  labels:
    app: beerfestdb-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: beerfestdb-app
  template:
    metadata:
      labels:
        app: beerfestdb-app
    spec:
      containers:
      - name: beerfestdb
        image: tfrayner/beerfestdb:latest
        imagePullPolicy: IfNotPresent
        command: ["beerfestdb_web_fastcgi.pl", "-l", ":3000", "-n", "1"]
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: '1'
            memory: 4G
          requests:
            cpu: 10m
            memory: 200Mi
        securityContext:
          runAsUser: 65534  # nobody user
        volumeMounts:
        - mountPath: /etc/ssl/custom
          name: beerfestdb-ssl-keyvol
          readOnly: true
        - name: beerfestdb-web-yml
          mountPath: /etc/beerfestdb/beerfestdb_web.yml
          subPath: beerfestdb_web.yml
          readOnly: true
## Uncomment this for local development with a bind mount of the source code. Make 
## sure to set the BEERFESTDB_ROOT_PATH environment variable in the container. See .app_env for an example.
#        - mountPath: /usr/src/BeerFestDB
#          name: beerfestdb-codevol
#        workingDir: /usr/src/BeerFestDB
      volumes:
      - name: beerfestdb-ssl-keyvol
        secret:
          secretName: beerfestdb-tls-secret
      - name: beerfestdb-web-yml
        secret:
          secretName: beerfestdb-web-yml
#      - name: beerfestdb-codevol
#        persistentVolumeClaim:
#          claimName: beerfestdb-code-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  namespace: beerfestdb
  name: beerfestdb-app-service
spec:
  selector:
    app: beerfestdb-app
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: beerfestdb
  name: beerfestdb-nginx
  labels:
    app: beerfestdb-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: beerfestdb-nginx
  template:
    metadata:
      labels:
        app: beerfestdb-nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.15.7-perl
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 443
        resources:
          limits:
            cpu: '1'
            memory: 4G
          requests:
            cpu: 10m
            memory: 200Mi
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/conf.d
        - name: beerfestdb-ssl-keyvol
          mountPath: /etc/ssl/custom
          readOnly: true
      volumes:
      - name: nginx-config
        configMap:
          name: beerfestdb-nginx-config
      - name: beerfestdb-ssl-keyvol
        secret:
          secretName: beerfestdb-tls-secret
---
apiVersion: v1
kind: Service
metadata:
  namespace: beerfestdb
  name: beerfestdb-nginx-service
spec:
  selector:
    app: beerfestdb-nginx
  ports:
  - protocol: TCP
    port: 443
    targetPort: 443
---
## If you want to use cert-manager to get TLS certs from Let's Encrypt, you can
## apply the following resources. You will need to replace the email address and
## domain name with your own. Please note that this will only work on a publicly 
## accessible cluster with a valid domain name pointing to it. If you are running
## this on a local cluster or without a valid domain, you will need to use
## self-signed certificates or another method for TLS.
# apiVersion: cert-manager.io/v1
# kind: Issuer
# metadata:
#   namespace: beerfestdb
#   name: letsencrypt-prod
# spec:
#   acme:
#     email: user@example.org
#     server: https://acme-v02.api.letsencrypt.org/directory
#     privateKeySecretRef:
#       name: letsencrypt-prod-issuer-account-key
#     solvers:
#       - http01:
#           ingress:
#             serviceType: ClusterIP
#             ingressClassName: traefik
# ---
# apiVersion: cert-manager.io/v1
# kind: Certificate
# metadata:
#   namespace: beerfestdb
#   name: beerfestdb-nginx-cert
# spec:
#   commonName: mybeerfestdb.example.net
#   secretName: beerfestdb-nginx-cert
#   dnsNames:
#     # Replace with your domain here
#     - mybeerfestdb.example.net
#   issuerRef:
#     kind: Issuer
#     name: letsencrypt-prod
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  namespace: beerfestdb
  name: beerfestdb-ingress
spec:
  ## This entryPoint needs to be set up in your Traefik configuration without TLS being enabled there.
  entryPoints:
    - bfdbsecure
  ## Using HostSNI(`*`) will match all TLS traffic on the specified entryPoint and pass it through to
  ## the nginx service, which will handle SSL termination and routing to the app. This allows us to use
  ## a single Traefik entryPoint for both the web dashboard and the main app, and route based on SNI or path in nginx.
  ## The downside is that Traefik won't be able to do any TLS routing decisions based on SNI, so all 
  ## traffic on this entryPoint will go to nginx. If you want to route based on SNI in Traefik instead, 
  ## you can set up separate entryPoints for the dashboard and main app, and use HostSNI rules to route
  ## to the appropriate service. In that case, you would also need to set up TLS termination in Traefik
  ## and pass the appropriate certificates there.
  routes:
  - match: HostSNI(`*`)
    services:
    - name: beerfestdb-nginx-service
      port: 443
  tls:
    passthrough: true
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: beerfestdb
  name: beerfestdb-dash
  labels:
    app: beerfestdb-dash
spec:
  replicas: 1
  selector:
    matchLabels:
      app: beerfestdb-dash
  template:
    metadata:
      labels:
        app: beerfestdb-dash
    spec:
      containers:
      - name: beerfestdb
        image: tfrayner/beerfestdb-dashboard:latest
        imagePullPolicy: IfNotPresent
        # Command is baked into the image. Override here if you want to change it.
        ports:
        - containerPort: 8501
        resources:
          limits:
            cpu: '1'
            memory: 4G
          requests:
            cpu: 10m
            memory: 200Mi
        securityContext:
          runAsUser: 65534  # nobody user
        volumeMounts:
        - name: beerfestdb-ssl-keyvol
          mountPath: /etc/ssl/custom
          readOnly: true
        - name: beerfestdb-web-yml
          mountPath: /beerfestdb_web.yml
          subPath: beerfestdb_web.yml
          readOnly: true
        - name: beerfestdb-dashboard-secret
          mountPath: /app/.streamlit/secrets.toml
          subPath: secrets.toml
          readOnly: true
      volumes:
      - name: beerfestdb-ssl-keyvol
        secret:
          secretName: beerfestdb-tls-secret
      - name: beerfestdb-web-yml
        secret:
          secretName: beerfestdb-web-yml
      - name: beerfestdb-dashboard-secret
        secret:
          secretName: beerfestdb-dashboard-secret
---
apiVersion: v1
kind: Service
metadata:
  namespace: beerfestdb
  name: beerfestdb-dash-service
spec:
  selector:
    app: beerfestdb-dash
  ports:
  - protocol: TCP
    port: 8501
    targetPort: 8501
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: beerfestdb
  name: beerfestdb-redis
  labels:
    app: beerfestdb-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: beerfestdb-redis
  template:
    metadata:
      labels:
        app: beerfestdb-redis
    spec:
      containers:
      - name: redis
        image: redis:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 6379
        resources:
          limits:
            cpu: '1'
            memory: 512Mi
          requests:
            cpu: 10m
            memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  namespace: beerfestdb
  name: beerfestdb-redis-service
spec:
  selector:
    app: beerfestdb-redis
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
---
